# DesiredView

InverseKinematics/: CMakeLists.txt  README.md
InverseKinematics/src/: CMakeLists.txt  main.cpp
PatientRegistration/: CMakeLists.txt  README.md  kinect1.ply  kinect1_2.ply
